--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   --color-primary: #ffe7e8;
   --color-primary-light: #f9eaea;
   --color-secondary: #172b4d;
-  --color-text: #352828;
+  --color-text: #4a3a3a;
   --color-border: #e2cfcf;
 }
 
@@ -58,13 +58,14 @@ body {
 /* ****Header Section**** */
 
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100vw;
-  height: 48px;
+  height: 58px;
+  z-index: 99;
   display: flex;
   justify-content: space-between;
-  color: var(--color-text);
+  color: var(--color-secondary);
 }
 
 header h1 {
@@ -79,15 +80,51 @@ header h1 a {
   color: var(--color-secondary);
 }
 
-header nav ul {
+header #desktop-nav ul {
   display: none;
   padding: 0;
   margin: 0;
 }
 
-header nav ul li a {
+header #mobile-nav {
+  width: 100vw;
+  background-color: white;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  list-style: none;
+  right: -100vw;
+  transition: 0.7s;
+}
+
+header #mobile-nav ul {
+  width: 100vw;
+  height: 90vh;
+  list-style: none;
+}
+header #mobile-nav ul li {
+  display: flex;
+  width: 100%;
+}
+
+header #mobile-nav ul li a {
+  text-decoration: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  color: var(--color-text);
+  width: 100%;
+  padding: 20px 28px 20px 28px;
+}
+
+header #desktop-nav ul li a {
   text-decoration: none;
   color: var(--color-secondary);
+  transition: 300ms;
 }
 
 header .toggleNav {
@@ -99,6 +136,7 @@ header .toggleNav {
   align-items: center;
   text-decoration: none;
   color: var(--color-text);
+  font-size: 20px;
 }
 
 /* ****Headline Section**** */
@@ -473,7 +511,7 @@ footer .contact-wrapper textarea {
     display: none;
   }
 
-  header nav {
+  header #desktop-nav {
     width: 100%;
     height: 72px;
     display: flex;
@@ -483,7 +521,11 @@ footer .contact-wrapper textarea {
     line-height: 1.25rem;
   }
 
-  header nav ul {
+  header #mobile-nav {
+    display: none;
+  }
+
+  header #desktop-nav ul {
     width: 255px;
     height: 40px;
     display: flex;
@@ -496,11 +538,11 @@ footer .contact-wrapper textarea {
     cursor: pointer;
   }
 
-  header nav ul li {
+  header #desktop-nav ul li {
     cursor: pointer;
   }
 
-  header nav ul li:hover {
+  header #desktop-nav ul li:hover {
     text-decoration: underline;
   }
 
