--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header #desktop-nav ul {
 
 header #mobile-nav {
   width: 100vw;
+  height: 95vh;
   background-color: white;
   position: absolute;
   z-index: 1;
@@ -97,6 +98,9 @@ header #mobile-nav {
   list-style: none;
   right: -100vw;
   transition: 0.7s;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius:30px;
+  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
 }
 
 header #mobile-nav ul {
@@ -118,7 +122,7 @@ header #mobile-nav ul li a {
   line-height: 44px;
   color: var(--color-text);
   width: 100%;
-  padding: 20px 28px 20px 28px;
+  padding: 10px 28px 10px 28px;
 }
 
 header #desktop-nav ul li a {
