--- a/style.css
+++ b/style.css
@@ -361,6 +361,10 @@ footer .contact-wrapper h3 {
 
 }
 
+.work-detail-wrapper .work-detail .row {
+  display: none;
+}
+
 .work-detail-wrapper .work-detail .btn-group {
   width: 100%;
   display: flex;
@@ -384,6 +388,7 @@ footer .contact-wrapper h3 {
 }
 
 .work-detail-wrapper .work-detail .list-tag {
+  width: 100%;
   height: 32px;
   padding: 0;
   margin-top: 5px;
@@ -400,7 +405,7 @@ footer .contact-wrapper h3 {
   text-align: start;
   margin: 0;
   padding-bottom: 12px;
-  padding-top: 5px;
+  padding-top: 12px;
   max-height: 32vh;
   overflow: hidden;
   order: 5;
@@ -411,6 +416,7 @@ footer .contact-wrapper h3 {
   height: 48px;
   padding: 12px 16px;
   display: inline-flex;
+  margin-top: 5px;
   margin-right: 12px;
 }
 
@@ -775,6 +781,7 @@ footer .contact-wrapper textarea {
 
   .work-detail-wrapper .work-detail .row {
     width: 100%;
+    height: 32px;
     display: flex;
     justify-content: flex-end;
   }
@@ -789,7 +796,7 @@ footer .contact-wrapper textarea {
     background-color: #ebecf0;
     color: #67798e;
     font-size: 20px;
-
+    cursor: pointer;
   }
 
   .work-detail-wrapper .work-detail img {
