fix contact form submitions bug; fix linter error

--- a/style.css
+++ b/style.css
@@ -586,6 +586,10 @@ footer .contact-wrapper textarea {
   min-height: 100px;
 }
 
+.errorOutline {
+  border: 2px solid red !important;
+}
+
 .error {
   color: red;
   font-weight: bold;
