Add padding to error message in line 593 css

--- a/style.css
+++ b/style.css
@@ -595,6 +595,7 @@ footer .contact-wrapper textarea {
   font-weight: bold;
   padding-top: 20px;
   padding-right: 12px;
+  padding-left: 12px;
 }
 
 .btn-contact {
